Fix 74 fix high contrast on form inputs

--- a/frontend/src/styles/scss/layout/_form.scss
+++ b/frontend/src/styles/scss/layout/_form.scss
@@ -19,4 +19,7 @@
     &::placeholder {
         color: theme.$sixth-color;
     }
+    &:focus {
+        background-color: theme.$sixth-color;
+    }
 }
